Add new section with styles

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </nav>
     <main>
-      <section class="first">
+      <section class="video-promo-section">
         <div class="media-wrapper">
           <video
             class="video"
@@ -85,6 +85,16 @@
         <div class="media-content">
           <h6>THE NEW</h6>
           <h1>AUDI VISION NEW KLASSE</h1>
+          <button class="big-btn">Más información</button>
+        </div>
+      </section>
+      <section class="product-section">
+        <div class="media-wrapper">
+          <img src="./assets/audi-car-2.jpeg" alt="" />
+        </div>
+        <div class="media-content">
+          <h6>AUDI ELECTRICS</h6>
+          <h4>LA EMOCION DE CONDUCIR</h4>
           <button class="big-btn">Más información</button>
         </div>
       </section>
