Add grrid styles

--- a/index.html
+++ b/index.html
@@ -102,9 +102,6 @@
         <div class="action">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
             class="bi bi-car-front"
             viewBox="0 0 16 16"
           >
@@ -116,14 +113,11 @@
             />
           </svg>
           <p>Configura tu Audi</p>
-          <button>Comenzar ahora</button>
+          <button class="small-btn">Comenzar ahora</button>
         </div>
         <div class="action">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
             class="bi bi-car-front"
             viewBox="0 0 16 16"
           >
@@ -135,14 +129,11 @@
             />
           </svg>
           <p>Configura tu Audi</p>
-          <button>Comenzar ahora</button>
+          <button class="small-btn">Comenzar ahora</button>
         </div>
         <div class="action">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
             class="bi bi-car-front"
             viewBox="0 0 16 16"
           >
@@ -154,14 +145,11 @@
             />
           </svg>
           <p>Configura tu Audi</p>
-          <button>Comenzar ahora</button>
+          <button class="small-btn">Comenzar ahora</button>
         </div>
         <div class="action">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
             class="bi bi-car-front"
             viewBox="0 0 16 16"
           >
@@ -173,7 +161,7 @@
             />
           </svg>
           <p>Configura tu Audi</p>
-          <button>Comenzar ahora</button>
+          <button class="small-btn">Comenzar ahora</button>
         </div>
       </section>
     </main>
