add footer accordion

--- a/index.html
+++ b/index.html
@@ -141,6 +141,130 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h4 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseOne"
+              aria-expanded="false"
+              aria-controls="flush-collapseOne"
+            >
+              Experiencia
+            </button>
+          </h4>
+          <div
+            id="flush-collapseOne"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <ul class="accordion-body">
+              <li>Menu</li>
+              <li>Audi Sport</li>
+              <li>Promociones</li>
+              <li>e-Newsletter</li>
+              <li>Audi International</li>
+              <li>Audi Go Green</li>
+              <li>Audi rewarrds</li>
+              <li>Audi podcast</li>
+            </ul>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h4 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseTwo"
+              aria-expanded="false"
+              aria-controls="flush-collapseTwo"
+            >
+              Servicios al cliente
+            </button>
+          </h4>
+          <div
+            id="flush-collapseTwo"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <ul class="accordion-body">
+              <li>Menu</li>
+              <li>Audi contigo</li>
+              <li>Atención a clientes</li>
+              <li>Audi connect</li>
+              <li>Servicio Audi</li>
+              <li>Audi financial services</li>
+              <li>Audi corrporate</li>
+              <li>Garantía extendida</li>
+              <li>Audi plus</li>
+              <li>Llamado a revisión de bolsas de aire</li>
+              <li>Llamado a revisión general</li>
+              <li>Delivery situation</li>
+            </ul>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h4 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseThree"
+              aria-expanded="false"
+              aria-controls="flush-collapseThree"
+            >
+              Audi Certified: plus
+            </button>
+          </h4>
+          <div
+            id="flush-collapseThree"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <ul class="accordion-body">
+              <li>Menu</li>
+              <li>Audi Certified :plus</li>
+              <li>Concesionarios Audi Certified :plus</li>
+            </ul>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h4 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseTwo"
+              aria-expanded="false"
+              aria-controls="flush-collapseTwo"
+            >
+              Compañía
+            </button>
+          </h4>
+          <div
+            id="flush-collapseTwo"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <ul class="accordion-body">
+              <li>Menu</li>
+              <li>Planta de Audi en México</li>
+              <li>Sustentabilidad social</li>
+              <li>Comité ejecutivo</li>
+              <li>Media center</li>
+              <li>Carreras</li>
+              <li>Documentos legales</li>
+              <li>Sistema de denuncias</li>
+              <li>Quejas por servicio</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
     <div id="app"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
