Add final details

--- a/index.html
+++ b/index.html
@@ -238,15 +238,15 @@
               class="accordion-button collapsed"
               type="button"
               data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseTwo"
+              data-bs-target="#flush-collapseFour"
               aria-expanded="false"
-              aria-controls="flush-collapseTwo"
+              aria-controls="flush-collapseFour"
             >
               Compañía
             </button>
           </h4>
           <div
-            id="flush-collapseTwo"
+            id="flush-collapseFour"
             class="accordion-collapse collapse"
             data-bs-parent="#accordionFlushExample"
           >
@@ -302,6 +302,7 @@
           </svg>
         </a>
       </section>
+      <p class="copy">© 2023 AUDI AG. Todos los derechos reservados.</p>
     </footer>
     <div id="app"></div>
     <script
